# kaggle_time_series

./: Makefile  README.md  pyproject.toml  requirements.txt
data/: final_test_cyclical.csv  final_train_cyclical.csv  fixed_train.csv  submission.csv  train_with_holidays.csv
notebooks/: eda.ipynb  modelling.ipynb  preprocessing.ipynb
reports/: report.md
