[tool.poetry]
name = "data-challenge"
version = "0.1.0"
description = ""
authors = ["Trung Dan Phan <trung-dan.phan@hec.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
black = "^24.8.0"
flake8 = "^7.1.1"
ipython = "^8.28.0"
isort = "^5.13.2"
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"
mkdocs = "^1.6.1"
notebook = "^7.2.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
pip = "^24.2"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.2"
tqdm = "^4.66.5"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
